# text-language-server

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml  release.yml
src/: error.rs  impl.rs  lib.rs  main.rs  server.rs  trait.rs  type.rs
src/impl/: mod.rs
src/impl/trait/: mod.rs  transform.rs  with_server.rs
src/impl/type/: epoch_to_utc.rs  mod.rs  source.rs  unescape.rs  unescape_source.rs
