[package]
name = "text-language-server"
version = "0.0.31"
edition = "2024"

[dependencies]
derive_builder = "0.20.2"
derive_more = { version = "2.0.1", features = ["display", "from"] }
scc = "2.3.3"
serde = "1.0.218"
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
tap = "1.0.1"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
tower-lsp = "0.20.0"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
unescape = "0.1.0"
