[package]
name = "text-language-server"
version = "0.0.40"
edition = "2024"

[dependencies]
bon = "3.4.0"
console-subscriber = "0.4.1"
derive_more = { version = "2.0.1", features = ["deref", "display", "from"] }
futures-lite = "2.6.0"
getset = "0.1.5"
ropey = { version = "2.0.0-alpha.2", features = ["metric_utf16"] }
scc = "2.3.3"
serde = "1.0.218"
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
tap = "1.0.1"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full", "tracing"] }
tower-lsp = "0.20.0"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
tracing-test = "0.2.5"
unescape = "0.1.0"
